--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,16 @@
     <string name="names">Nombre</string>
     <string name="last_name">Apellidos</string>
     <string name="id">Cédula de Identidad</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    <!--STRING ELEMENTOS DEL BOTTOM BAR-->
+    <string name="tab_bookList">Libros</string>
+    <string name="tab_category">Categorias</string>
+    <string name="tab_rentalClient">Rentas</string>
+    <string name="title_activity_dashboard">dashboard</string>
+    <string name="title_home">Home</string>
+    <string name="title_dashboard">Dashboard</string>
+    <string name="title_notifications">Notifications</string>
 </resources>
