--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,6 +11,7 @@
     <string name="names">Nombre</string>
     <string name="last_name">Apellidos</string>
     <string name="id">Cédula de Identidad</string>
+    <string name="id_reg">Cédula de Identidad (sin guiones)</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
